--- a/package.json
+++ b/package.json
@@ -13,56 +13,74 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
-    "@capacitor/app": "5.0.2",
-    "@capacitor/core": "5.0.3",
-    "@capacitor/haptics": "5.0.2",
-    "@capacitor/keyboard": "5.0.2",
-    "@capacitor/status-bar": "5.0.2",
+    "@angular/common": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.6.1",
+    "@angular/forms": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
+    "@capacitor/android": "^5.0.3",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/assets": "^2.0.4",
+    "@capacitor/camera": "^5.0.1",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/geolocation": "^5.0.1",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
+    "bson-objectid": "^2.0.4",
+    "dot-env": "^0.0.1",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.22.1",
     "ionicons": "^7.0.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular-eslint/builder": "^16.0.0",
-    "@angular-eslint/eslint-plugin": "^16.0.0",
-    "@angular-eslint/eslint-plugin-template": "^16.0.0",
-    "@angular-eslint/schematics": "^16.0.0",
-    "@angular-eslint/template-parser": "^16.0.0",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.0.3",
+    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular-eslint/builder": "^15.0.0",
+    "@angular-eslint/eslint-plugin": "^15.0.0",
+    "@angular-eslint/eslint-plugin-template": "^15.0.0",
+    "@angular-eslint/schematics": "^15.0.0",
+    "@angular-eslint/template-parser": "^15.0.0",
+    "@angular/cli": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/compiler-cli": "^15.0.0",
+    "@angular/language-service": "^15.0.0",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
-    "@types/jasmine": "~4.3.0",
+    "@types/chai": "^4.3.5",
+    "@types/jasmine": "~4.0.0",
+    "@types/mocha": "^10.0.1",
+    "@types/mochawesome": "^6.2.1",
     "@types/node": "^12.11.1",
+    "@types/selenium-webdriver": "^4.1.15",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^7.26.0",
+    "chai": "^4.3.7",
+    "chromedriver": "^113.0.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~4.6.0",
+    "jasmine-core": "~4.3.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ts-node": "^8.3.0",
-    "typescript": "~5.0.2"
+    "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-report-generator": "^6.2.0",
+    "selenium-webdriver": "^4.9.2",
+    "ts-node": "~8.3.0",
+    "typescript": "~4.8.4"
   },
   "description": "An Ionic project"
 }
