--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,32 @@ on:
 jobs:
   build-and-push-front:
     runs-on: ubuntu-latest
+    - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build Ionic app
+        run: npm run build
+
+      - name: Run unit tests
+        run: npm run test
+
+      - name: Start server for E2E tests
+        run: npm run start
+
+      - name: Wait for server to start
+        run: sleep 10s
+
+      - name: Run E2E tests
+        run: npm run e2e
+
     steps:
       - uses: actions/checkout@v3
       - name: Authenticate to Google Cloud
