--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "5.3.0",
     "chai": "^4.3.7",
     "chromedriver": "^113.0.0",
+    "cypress": "^12.13.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
