--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  build-and-push-front:
+  tests-front:
     runs-on: ubuntu-latest
 
     steps:
@@ -35,6 +35,9 @@ jobs:
 
       - name: Run E2E tests
         run: npm run e2e
+
+  build-and-push:
+    runs-on: ubuntu-latest
 
       - uses: actions/checkout@v3
       - name: Authenticate to Google Cloud
